Började införa UHF-bandplanen från PTS

--- a/rhb.tex
+++ b/rhb.tex
@@ -439,8 +439,217 @@ Rekommendationer för repeatrar i olika distrikt och län att använda CTCSS fö
 		\item[$^1$] SSA har ett fel i sin bandplan här där det står 433.500--433.5940 i stället.
 	\end{itemize}
 \end{landscape}
-\end{document}
+
 
 \begin{landscape}
+	\small
 \section{PTS Bandplan för VHF}
+\begin{longtable}{llll}
+	          \textbf{Frekvens}            &  \textbf{Duplex}   & \textbf{Användning}                   & \textbf{Anmärkning}            \\ \hline
+	              30.0--37.5               &                    & Medicinska implantat                  & Undantag f. tillst.pl.         \\
+	                                       &                    &                                       & 2006/771/EG 2013/752/EU        \\
+	              30.01--68                &                    & Militär användning                    &  \\
+	            30.015--30.025             &                    & Telemetri och Radiostyrning           & Undantag från tillståndsplikt  \\
+	                                       &                    &                                       & radiost. trafikljus            \\
+	            30,265--30,355             &                    & Telemetri och radiostyrning           & Undantag från tillståndsplikt  \\
+	            30,925--31,375             &                    & Landmobil radio                       & Undantag från tillståndsplikt  \\
+	            34,995--35,275             &                    & Radiostyrning av modellflygplan       & Undantag från tillståndsplikt  \\
+	             37,5--41,015              &                    & Landmobil radio                       &  \\
+	             37,5--38,25               &                    & Radioastronomi                        & Onsala rymd - observatorium    \\
+	            39,525--39,55              &                    & Telemetri och radiostyrning           & Undantag från tillståndsplikt  \\
+	            40,45--40,575              &                    & Telemetri och radiostyrning           & Undantag från tillståndsplikt  \\
+	             40,66--40,7               &                    & Allmän kortdistansradio               & Undantag f. tillst.pl.         \\
+	                                       &                    &                                       & 2006/771/EG 2013/752/EU        \\
+	             40,66--40,7               &                    & ISM                                   &  \\
+	             40,66--40,8               &                    & Telemetri och radiostyrning           & Undantag från tillståndsplikt  \\
+	               41--43,6                &                    & Ljudöverföring                        & Undantag från tillståndsplikt  \\
+	                50--52                 &                    & Amatörradio                           & Undantag från tillståndsplikt  \\
+	                                       &                    &                                       & (Max 200 W)                    \\
+	               68--74,8                &                    & Landmobil radio                       &  \\
+	               68--74,8                &                    & PMR                                   &  \\
+	             69,6--69,725              &                    & Landmobil radio                       & Undantag från tillståndsplikt  \\
+	             69,6--69,725              &                    & PMR	Undantag från tillståndsplikt     &  \\
+	               73--74,6                &                    & Radioastronomi                        & Onsala rymd - observatorium    \\
+	              74,8--75,2               &                    & Radionavigering för luftfart          &  \\
+	              74,8--75,2               &                    & Luftfartsradio (ILS)                  &  \\
+	             75,2--75,625              &                    & Landmobil radio                       &  \\
+	%%% Sidbrytning %%%
+	\textbf{Frekvens} &  \textbf{Duplex}   & \textbf{Användning}                   & \textbf{Anmärkning}            \\ \hline
+	             75,2--75,625              &                    & PMR                                   &  \\
+	            75,625--77,475             &   80.625--82.475   & Landmobil radio                       &  \\
+	            75,625--77,475             &   80.625--82.475   & PMR                                   &  \\
+	            77,475--80,625             &                    & Landmobil radio                       &  \\
+	            77,475--80,625             &                    & PMR                                   &  \\
+	            80,625--82,475             &   75.625--77.475   & Landmobil radio                       &  \\
+	            80,625--82,475             &   75.625--77.475   & PMR                                   &  \\
+	             82,475--87,5              &                    & Landmobil radio                       &  \\
+	             82,475--87,5              &                    & PMR                                   &  \\
+	              87,5--108                &                    & Rundradio	Band II, GE84               &  \\
+	              87,5--108                &                    & Ljudöverföring                        & Undantag från tillståndsplikt  \\
+	                                       &                    &                                       & 2006/771/EG 2013/752/EU        \\
+	              87,5--108                &                    & FM analog ljudradio	Band II, GE84     &  \\
+	             108--117,975              &                    & Radionavigering för luftfart          &  \\
+	             108--117,975              &                    & Luftfartsradio (ILS)                  &  \\
+	             108--117,975              &                    & Luftfartsradio (VOR)                  &  \\
+	             117,975--137              &                    & Luftfartsradio                        &  \\
+	            121,45--121,55             &                    & Sjöfartsradio (EPIRB)                 & Positionsbestämning;           \\
+	                                       &                    &                                       & undantag f. tillst.pl.         \\
+	                                       &                    &                                       & COSPAS/SARSAT-sändare          \\
+	            121,45--121,55             &                    & PLB                                   & Positionsbestämning;           \\
+	                                       &                    &                                       & undantag f. tillst.pl.         \\
+	                                       &                    &                                       & COSPAS/SARSAT-sändare          \\
+	               137--138                &                    & Satellit                              & MSS nedlänk ERC/DEC/(99)05     \\
+	               138--144                &                    & Militär användning                    &  \\
+	              138--143,6               &                    & Landmobil radio                       &  \\
+	               144--146                &                    & Amatörradio                           & Undantag från tillst.pl.       \\
+	              146--149,9               &                    & Militär användning                    &  \\
+	             146,05--147               &    150.05--151     & Landmobil radio                       &  \\
+	             146,05--147               &    150.05--151     & PMR                                   &  \\
+	%%% Sidbrytning %%%
+	\textbf{Frekvens} &  \textbf{Duplex}   & \textbf{Användning}                   & \textbf{Anmärkning}            \\ \hline
+	              147--149,9               &                    & Landmobil radio                       &  \\
+	             148--150,05               &                    & Jordstationer (mobila satellitsystem) & MSS upplänk                    \\
+	                                       &                    &                                       & Undantag från tillst.pl.       \\
+	                                       &                    &                                       & ERC/DEC/(99)05                 \\
+	                                       &                    &                                       & ERC/DEC/(99)06                 \\
+	           150,05--155,9875            &                    & Militär användning                    &  \\
+	             150,05--151               &    146.05--147     & Landmobil radio                       &  \\
+	             150,05--153               &                    & Radioastronomi                        & Onsala rymd - observatorium    \\
+	             150,05--151               &    146.05--147     & PMR                                   &  \\
+	               151--153                &                    & Landmobil radio                       &  \\
+	           151,52--151,555             &                    & Spårning, pejling och datainsamling   & Undantag från tillståndsplikt  \\
+	           151,52--152,2675            &                    & Radiopejling av djur                  & Undantag från tillståndsplikt  \\
+	            154--155,9875              &                    & Sjöfartsradio                         &  \\
+	            154--155,9875              &                    & Landmobil radio                       &  \\
+	          155,3875--155,5375           &                    & Landmobil radio                       & Undantag från tillståndsplikt; \\
+	                                       &                    &                                       & jord- och skogsbruk samt jakt  \\
+	          155,9875--156,0125           &                    & Landmobil radio                       & Undantag från tillståndsplikt  \\
+	          156,0125--156,3625           & 160.6125--160.9625 & Sjöfartsradio                         & RR AP18                        \\
+	          156,3625--156,7625           &                    & Sjöfartsradio                         & RR AP18                        \\
+	          156,4875--156,7625           &                    & Landmobil radio                       &  \\
+	          156,5125--156,5375           &                    & Sjöfartsradio (DSC)                   & RR AP18 Nödanrop               \\
+	          156,7625--156,8375           &                    & Sjöfartsradio                         & RR AP18, Kanal 16              \\
+	          156,8375--156,8875           &                    & Sjöfartsradio                         &  \\
+	          156,8375--158,075            &                    & Landmobil radio                       &  \\
+	          156,8375--158,075            &                    & PMR                                   &  \\
+	          156,8875--157,4375           & 161.4875--162.0375 & Sjöfartsradio                         & RR AP18                        \\
+	          158,075--160,6125            & 166.075--168.6125  & Landmobil radio                       &  \\
+	           158,075--160,625            &  166.075--168.625  & Landmobil radio                       &  \\
+	           158,075--160,625            &  166.075--168.625  & PMR                                   &  \\
+	          158,075--160,6125            & 166.075--168.6125  & PMR                                   &  \\
+	%%% Sidbrytning %%%
+	\textbf{Frekvens} &  \textbf{Duplex}   & \textbf{Användning}                   & \textbf{Anmärkning}            \\ \hline
+	          160,6125--160,9625           & 156.0125--156.3625 & Sjöfartsradio                         & RR AP18                        \\
+	          160,6125--162,0375           &                    & Landmobil radio                       &  \\
+	          160,6125--162,0375           &                    & PMR                                   &  \\
+	          161,4875--162,0375           & 156.8875--157.4375 & Sjöfartsradio                         & RR AP18                        \\
+	            161,85--162,15             &                    & Sjöfartsradio (AIS)                   & RR AP18 ERC/DEC(99)17          \\
+	             162,025--163              &    170.025--171    & Landmobil radio                       &  \\
+	             162,025--163              &    170.025--171    & PMR                                   &  \\
+	               163--164                &      171--172      & Militär användning                    &  \\
+	               164--166                &      172--174      & Landmobil radio                       &  \\
+	               164--166                &      172--174      & PMR                                   &  \\
+	             166--166,075              &                    & Landmobil radio                       &  \\
+	             166--166,075              &                    & PMR                                   &  \\
+	          166,075--168,6125            & 158.075 - 160.6125 & Landmobil radio                       &  \\
+	           166,075--168,625            & 158.075 - 160.625  & Landmobil radio                       &  \\
+	           166,075--168,625            & 158.075 - 160.625  & PMR                                   &  \\
+	          166,075--168,6125            & 158.075 - 160.6125 & PMR                                   &  \\
+	           168,625--170,025            &                    & Landmobil radio                       &  \\
+	           168,625--170,025            &                    & Personsökning                         &  \\
+	           168,625--170,025            &                    & PMR                                   &  \\
+	            169,375--169,4             &                    & Allmän kortdistansradio               & Undantag från tillståndsplikt  \\
+	           169,4--169,8125             &                    & Allmän kortdistansradio               & Undantag från tillståndsplikt  \\
+	                                       &                    & 2006/771/EG 2013/752/EU               &  \\
+	            169,4--169,475             &                    & Hörselhjälpmedel                      & Undantag från tillståndsplikt  \\
+	                                       &                    &                                       & 2006/771/EG 2013/752/EU        \\
+	            169,4--169,475             &                    & Mätaravläsning                        & Undantag från tillståndsplikt  \\
+	                                       &                    &                                       & 2006/771/EG 2013/752/EU        \\
+	          169,4875--169,5875           &                    & Hörselhjälpmedel                      & Undantag från tillståndsplikt  \\
+	                                       &                    &                                       & 2006/771/EG 2013/752/EU        \\
+	             170,025--171              &    162.025--163    & Landmobil radio                       &  \\
+	             170,025--171              &    162.025--163    & PMR                                   &  \\
+	%%% Sidbrytning %%%
+	\textbf{Frekvens} &  \textbf{Duplex}   & \textbf{Användning}                   & \textbf{Anmärkning}            \\ \hline
+	               171--172                &      163--164      & Militär användning                    &  \\
+	               172--174                &      164--166      & Landmobil radio                       &  \\
+	               172--174                &      164--166      & PMR                                   &  \\
+	               174--223                &                    & Rundradio (DVB-T)                     & Äv. DVB-T2 Band III, k. 5--11  \\
+	               174--223                &                    & Rundradio (T-DAB)                     & Äv. DVB-T2 Band III, k. 5--11  \\
+	               223--230                &                    & Rundradio (DVB-T)                     & Äv. DVB-T2 Band III, k. 12     \\
+	               223--230                &                    & Rundradio (T-DAB)                     & Äv. DVB-T2 Band III, k. 12     \\
+	               230--240                &                    & Rundradio (T-DAB)                     & WI95revCO07                    \\
+	               240--267                &                    & Landmobil radio                       &  \\
+	            242,95--243,05             &                    & SAR (kommunikation)                   &
+\end{longtable}
+\normalsize
 \end{landscape}
+
+\begin{landscape}
+\section{PTS bandplan för UHF}
+\begin{longtable}{llll}
+	\textbf{Frekvens}  & \textbf{Duplex} & \textbf{Användning}         & \textbf{Anmärkning}             \\ \hline
+	328,6--335,4       &                 & Radionavigering             & För luftfart                    \\
+	328,6--335,4       &                 & Luftfartsradio (ILS)        &  \\
+	335,4--386         &                 & Militär användning          &  \\
+	336--339           & 357--360        & Landmobil radio             &  \\
+	336--339           & 357--360        & SAP/SAB bärbara ljudlänkar  &  \\
+	357--360           & 336--339        & Landmobil radio             &  \\
+	357--360           & 336--339        & SAP/SAB bärbara ljudlänkar  &  \\
+	370--371           & 386--387        & Fast radio                  & Svensk kanalplan Smalbandig     \\
+	374--376           & 387--389        & Fast radio                  & Svensk kanalplan Smalbandig     \\
+	380--385           & 390--395        & Landmobil radio             & Blocktillstånd Rakel            \\
+	380--385           & 390--395        & TETRA                       & Blocktillstånd Rakel            \\
+	386--387           & 370--371        & Fast radio                  & Svensk kanalplan Smalbandig     \\
+	387--389           & 374--376        & Fast radio                  & Svensk kanalplan Smalbandig     \\
+	389--390           &                 & Militär användning          &  \\
+	390--395           & 380--385        & Landmobil radio             & Blocktillstånd Rakel            \\
+	390--395           & 380--385        & TETRA                       & Blocktillstånd Rakel            \\
+	395--399,9         &                 & Militär användning          &  \\
+	399,9--400,05      &                 & Satellitnavigerings-system  &  \\
+	400,05--400,15     &                 & Satellit                    & Standardfrekvens och tidssignal \\
+	400,15--401        &                 & Satellit                    & MSS nedlänk ERC/DEC/(99)05      \\
+	400,15--404        &                 & Ballongburna radiosonder    &  \\
+	400,15--404        &                 & Meteorologi                 &  \\
+	401--406           &                 & Medicinska implantat        & Undantag från tillståndsplikt   \\
+	402--403           &                 & Meteorologi                 & Via satellit                    \\
+	404--406           &                 & Landmobil radio             &  \\
+	\textbf{Frekvens}  & \textbf{Duplex} & \textbf{Användning}         & \textbf{Anmärkning}             \\ \hline
+
+	406--406,1         &                 & Sjöfartsradio (EPIRB)       & Undantag från tillståndsplikt   \\
+	                   &                 &                             & (COSPAS-SARSAT)                 \\
+	406--406,1         &                 & PLB                         & Undantag från tillståndsplikt   \\
+	                   &                 &                             & (COSPAS-SARSAT)                 \\
+	406,1--410         &                 & Landmobil radio             &  \\
+	406,1--410         &                 & PMR                         &  \\
+	410--420           & 420--430        & Landmobil radio             &  \\
+	410--420           & 420--430        & PMR                         &  \\
+	410--420           & 420--430        & TETRA                       &  \\
+	420--430           & 410--420        & Landmobil radio             &  \\
+	420--430           & 410--420        & PMR                         &  \\
+	420--430           & 410--420        & TETRA                       &  \\
+	429,4375--429,4625 &                 & Larmöverföring              & Undantag från tillståndsplikt   \\
+	430--432           &                 & Landmobil radio             &  \\
+	432	438            &                 & Amatörradio                 & Undantag från tillståndsplikt   \\
+	433,05--434,79     &                 & Allmän kortdistansradio     & Undantag från tillståndsplikt   \\
+	                   &                 &                             & 2006/771/EG 2013/752/EU         \\
+	438--439,6875      &                 & Telemetri och radiostyrning &  \\
+	438--439,6875      &                 & Kortdistansradio (SRD)      &  \\
+	439,6875--439,9875 &                 & Telemetri och radiostyrning & Undantag från tillståndsplikt   \\
+	440--442           &                 & Landmobil radio             &  \\
+	442--444           & 448--450        & Landmobil radio             &  \\
+	442--444           & 448--450        & PMR                         &  \\
+	443,9875--444,4125 &                 & Telemetri och radiostyrning & Undantag från tillståndsplikt   \\
+	444--444,5875      &                 & Landmobil radio             &  \\
+	444--444,5875      &                 & Telemetri och radiostyrning &  \\
+	444,5875--444,9875 &                 & Landmobil radio             & Undantag från tillståndsplikt   \\
+	444,5875--448      &                 & Landmobil radio             &
+\end{longtable}
+$>>>>>>>>>$ Info saknas
+
+\end{landscape}
+
+
+
+\end{document}
+
