Mer info om UHF-bandet

--- a/rhb.tex
+++ b/rhb.tex
@@ -588,64 +588,96 @@ Rekommendationer för repeatrar i olika distrikt och län att använda CTCSS fö
 \begin{landscape}
 \section{PTS bandplan för UHF}
 \begin{longtable}{llll}
-	\textbf{Frekvens}  & \textbf{Duplex} & \textbf{Användning}         & \textbf{Anmärkning}             \\ \hline
-	328,6--335,4       &                 & Radionavigering             & För luftfart                    \\
-	328,6--335,4       &                 & Luftfartsradio (ILS)        &  \\
-	335,4--386         &                 & Militär användning          &  \\
-	336--339           & 357--360        & Landmobil radio             &  \\
-	336--339           & 357--360        & SAP/SAB bärbara ljudlänkar  &  \\
-	357--360           & 336--339        & Landmobil radio             &  \\
-	357--360           & 336--339        & SAP/SAB bärbara ljudlänkar  &  \\
-	370--371           & 386--387        & Fast radio                  & Svensk kanalplan Smalbandig     \\
-	374--376           & 387--389        & Fast radio                  & Svensk kanalplan Smalbandig     \\
-	380--385           & 390--395        & Landmobil radio             & Blocktillstånd Rakel            \\
-	380--385           & 390--395        & TETRA                       & Blocktillstånd Rakel            \\
-	386--387           & 370--371        & Fast radio                  & Svensk kanalplan Smalbandig     \\
-	387--389           & 374--376        & Fast radio                  & Svensk kanalplan Smalbandig     \\
-	389--390           &                 & Militär användning          &  \\
-	390--395           & 380--385        & Landmobil radio             & Blocktillstånd Rakel            \\
-	390--395           & 380--385        & TETRA                       & Blocktillstånd Rakel            \\
-	395--399,9         &                 & Militär användning          &  \\
-	399,9--400,05      &                 & Satellitnavigerings-system  &  \\
-	400,05--400,15     &                 & Satellit                    & Standardfrekvens och tidssignal \\
-	400,15--401        &                 & Satellit                    & MSS nedlänk ERC/DEC/(99)05      \\
-	400,15--404        &                 & Ballongburna radiosonder    &  \\
-	400,15--404        &                 & Meteorologi                 &  \\
-	401--406           &                 & Medicinska implantat        & Undantag från tillståndsplikt   \\
-	402--403           &                 & Meteorologi                 & Via satellit                    \\
-	404--406           &                 & Landmobil radio             &  \\
-	\textbf{Frekvens}  & \textbf{Duplex} & \textbf{Användning}         & \textbf{Anmärkning}             \\ \hline
+	\textbf{Frekvens}  & \textbf{Duplex}    & \textbf{Användning}            & \textbf{Anmärkning}                 \\ \hline
+	328,6--335,4       &                    & Radionavigering                & För luftfart                        \\
+	328,6--335,4       &                    & Luftfartsradio (ILS)           &  \\
+	335,4--386         &                    & Militär användning             &  \\
+	336--339           & 357--360           & Landmobil radio                &  \\
+	336--339           & 357--360           & SAP/SAB bärbara ljudlänkar     &  \\
+	357--360           & 336--339           & Landmobil radio                &  \\
+	357--360           & 336--339           & SAP/SAB bärbara ljudlänkar     &  \\
+	370--371           & 386--387           & Fast radio                     & Svensk kanalplan Smalbandig         \\
+	374--376           & 387--389           & Fast radio                     & Svensk kanalplan Smalbandig         \\
+	380--385           & 390--395           & Landmobil radio                & Blocktillstånd Rakel                \\
+	380--385           & 390--395           & TETRA                          & Blocktillstånd Rakel                \\
+	386--387           & 370--371           & Fast radio                     & Svensk kanalplan Smalbandig         \\
+	387--389           & 374--376           & Fast radio                     & Svensk kanalplan Smalbandig         \\
+	389--390           &                    & Militär användning             &  \\
+	390--395           & 380--385           & Landmobil radio                & Blocktillstånd Rakel                \\
+	390--395           & 380--385           & TETRA                          & Blocktillstånd Rakel                \\
+	395--399,9         &                    & Militär användning             &  \\
+	399,9--400,05      &                    & Satellitnavigerings-system     &  \\
+	400,05--400,15     &                    & Satellit                       & Standardfrekvens och tidssignal     \\
+	400,15--401        &                    & Satellit                       & MSS nedlänk ERC/DEC/(99)05          \\
+	400,15--404        &                    & Ballongburna radiosonder       &  \\
+	400,15--404        &                    & Meteorologi                    &  \\
+	401--406           &                    & Medicinska implantat           & Undantag från tillståndsplikt       \\
+	402--403           &                    & Meteorologi                    & Via satellit                        \\
+	404--406           &                    & Landmobil radio                &  \\
+	\textbf{Frekvens}  & \textbf{Duplex}    & \textbf{Användning}            & \textbf{Anmärkning}                 \\ \hline
+	406--406,1         &                    & Sjöfartsradio (EPIRB)          & Undantag från tillståndsplikt       \\
+	                   &                    &                                & (COSPAS-SARSAT)                     \\
+	406--406,1         &                    & PLB                            & Undantag från tillståndsplikt       \\
+	                   &                    &                                & (COSPAS-SARSAT)                     \\
+	406,1--410         &                    & Landmobil radio                &  \\
+	406,1--410         &                    & PMR                            &  \\
+	410--420           & 420--430           & Landmobil radio                &  \\
+	410--420           & 420--430           & PMR                            &  \\
+	410--420           & 420--430           & TETRA                          &  \\
+	420--430           & 410--420           & Landmobil radio                &  \\
+	420--430           & 410--420           & PMR                            &  \\
+	420--430           & 410--420           & TETRA                          &  \\
+	429,4375--429,4625 &                    & Larmöverföring                 & Undantag från tillståndsplikt       \\
+	430--432           &                    & Landmobil radio                &  \\
+	432	438            &                    & Amatörradio                    & Undantag från tillståndsplikt       \\
+	433,05--434,79     &                    & Allmän kortdistansradio        & Undantag från tillståndsplikt       \\
+	                   &                    &                                & 2006/771/EG 2013/752/EU             \\
+	438--439,6875      &                    & Telemetri och radiostyrning    &  \\
+	438--439,6875      &                    & Kortdistansradio (SRD)         &  \\
+	439,6875--439,9875 &                    & Telemetri och radiostyrning    & Undantag från tillståndsplikt       \\
+	440--442           &                    & Landmobil radio                &  \\
+	442--444           & 448--450           & Landmobil radio                &  \\
+	442--444           & 448--450           & PMR                            &  \\
+	443,9875--444,4125 &                    & Telemetri och radiostyrning    & Undantag från tillståndsplikt       \\
+444--444,5875      &                    & Landmobil radio                &  \\
+	444--444,5875      &                    & Telemetri och radiostyrning    &  \\
+	444,5875--444,9875 &                    & Landmobil radio                & Undantag från tillståndsplikt       \\
+	\textbf{Frekvens}  & \textbf{Duplex}    & \textbf{Användning}            & \textbf{Anmärkning}                 \\ \hline
+	444,5875--448      &                    & Landmobil radio                &  \\
+	444,5875--448      &                    & PMR                            &  \\
+	446--446,1         &                    & PMR 446                        & Undantag från tillståndsplikt       \\
 
-	406--406,1         &                 & Sjöfartsradio (EPIRB)       & Undantag från tillståndsplikt   \\
-	                   &                 &                             & (COSPAS-SARSAT)                 \\
-	406--406,1         &                 & PLB                         & Undantag från tillståndsplikt   \\
-	                   &                 &                             & (COSPAS-SARSAT)                 \\
-	406,1--410         &                 & Landmobil radio             &  \\
-	406,1--410         &                 & PMR                         &  \\
-	410--420           & 420--430        & Landmobil radio             &  \\
-	410--420           & 420--430        & PMR                         &  \\
-	410--420           & 420--430        & TETRA                       &  \\
-	420--430           & 410--420        & Landmobil radio             &  \\
-	420--430           & 410--420        & PMR                         &  \\
-	420--430           & 410--420        & TETRA                       &  \\
-	429,4375--429,4625 &                 & Larmöverföring              & Undantag från tillståndsplikt   \\
-	430--432           &                 & Landmobil radio             &  \\
-	432	438            &                 & Amatörradio                 & Undantag från tillståndsplikt   \\
-	433,05--434,79     &                 & Allmän kortdistansradio     & Undantag från tillståndsplikt   \\
-	                   &                 &                             & 2006/771/EG 2013/752/EU         \\
-	438--439,6875      &                 & Telemetri och radiostyrning &  \\
-	438--439,6875      &                 & Kortdistansradio (SRD)      &  \\
-	439,6875--439,9875 &                 & Telemetri och radiostyrning & Undantag från tillståndsplikt   \\
-	440--442           &                 & Landmobil radio             &  \\
-	442--444           & 448--450        & Landmobil radio             &  \\
-	442--444           & 448--450        & PMR                         &  \\
-	443,9875--444,4125 &                 & Telemetri och radiostyrning & Undantag från tillståndsplikt   \\
-	444--444,5875      &                 & Landmobil radio             &  \\
-	444--444,5875      &                 & Telemetri och radiostyrning &  \\
-	444,5875--444,9875 &                 & Landmobil radio             & Undantag från tillståndsplikt   \\
-	444,5875--448      &                 & Landmobil radio             &
+	446,1--446,2       &                    & Landmobil radio                & Undantag från tillståndsplikt       \\
+	                   &                    &                                & Digital PMR ECC/DEC/(05)12          \\
+	448--450           & 442--444           & Landmobil radio                &  \\
+	448--450           & 442--444           & PMR                            &  \\
+	450--452,5         & 460--462.5         & PMR                            &  \\
+	452,5--457,5       & 462.5--467.5       & CDMA 450                       & Digitala cellulära system           \\
+	457,5--460         & 467.5--470         & PMR                            &  \\
+	457,5125--457,5875 & 467.5125--467.5875 & Kom. ombord fartyg & 3 kanaler 25 kHz                    \\
+	                   &                    &                                & 5 kanaler 12,5 kHz                  \\
+	460--462,5         & 450--452.5         & PMR                            &  \\
+	462,5--467,5       & 452.5--457.5       & CDMA 450                       & Digitala cellulära system           \\
+	467,5--470         & 457.5--460         & PMR                            &  \\
+	467,5125--467,5875 & 457.5125--457.5875 & Kom. ombord  fartyg & 3 kanaler 25 kHz                    \\
+	                   &                    &                                & 5 kanaler 12,5 kHz                  \\
+	470--790           &                    & Ljudöverföring                 & ERC/REC 70-03, Annex 10 e           \\
+	470--790           &                    & Rundradio (DVB-T)              & Äv. DVB-T2 Band IV/V, k. 21--60, \\
+	                   &                    &                                & 470-694 MHz tom 31 mars 2020;       \\
+	                   &                    &                                & 694-790 MHz tom 31 mars 2017        \\
+	790--862           &                    & TRA-ECS	Blocktillstånd         & Undantag från tillståndsplikt       \\
+	823--832           &                    & Ljudöverföring                 & Undantag från tillståndsplikt       \\
+	862--863           &                    & Övrigt                         &  \\
+	863--865           &                    & Allmän kortdistansradio        & Undantag från tillståndsplikt       \\
+	863--865           &                    & Ljudöverföring                 & Undantag från tillståndsplikt       \\
+	865--868           &                    & RFID                           & Undantag från tillståndsplikt       \\
+	\textbf{Frekvens}  & \textbf{Duplex}    & \textbf{Användning}            & \textbf{Anmärkning}                 \\ \hline
+
+	865--868           &                    & Allmän kortdistansradio        & Undantag från tillståndsplikt       \\
+	868--870           &                    & Allmän kortdistansradio        & Undantag från tillståndsplikt       \\
+	868,6--869,7       &                    & Larmöverföring                 & Undantag från tillståndsplikt       \\
+	869,2--869,25      &                    & Trygghetslarm                  & Undantag från tillståndsplikt
 \end{longtable}
-$>>>>>>>>>$ Info saknas
 
 \end{landscape}
 
